# Open-Pectus

./: .gitignore  DEVELOPMENT.md  ERROR_RECOVERY.md  LICENSE  README.md  environment.yml  miniconda terminal.bat  pyproject.toml  requirements.txt  sync conda and packages.ps1  sync conda packages.bat
.github/workflows/: combined-workflows.yml  frontend.yml  publish-and-deploy.yml  python-app.yml  workflows.yml
WebSockets/: README.md  aggregator.py  engine.py  user.py
docs/: .readthedocs.yaml  Makefile  Reference.rst  conf.py  generate_openapi_yml.py  index.rst  make.bat  pcode_lexer.py  requirements.txt  spelling_wordlist.txt
docs/src/: Deployment.rst  Development.rst  Error Recovery.rst  Introduction.rst  Protocols.rst  To Do List.rst  Unit Operation Definition.rst  User Authorization (OIDC).rst
docs/src/mermaid/: aggregator_state_diagram.mdd  c4_deployment_diagram.mdd  engine_aggregator_protocol_overview.mdd  engine_command_execution.mdd  engine_scan_cycle.mdd  engine_state_diagram.mdd  frontend_aggregator_rest_interactions.mdd  frontend_aggregator_websocket_interactions.mdd  open_pectus_architecture.mdd
docs/src/static/: pcode.css
frontend/: angular.json  bundle-editor-worker.js  bundle-monaco-workers.js  bundle-textmate-worker.js  eslint.config.js  extra-webpack.config.js  ngsw-config.json  openapi-ts.config.ts  openapi.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: index.html  main.ts  manifest.webmanifest  mockServiceWorker.js  proxy.conf.json  styles.scss
frontend/src/app/: app.component.ts  defaults.ts  msw-enablement.component.ts  notification-preferences.component.ts  notification.types.ts  top-bar.component.ts
frontend/src/fastapi_websocket/: fastapi_websocket_rpc.typings.d.ts  test-websocket.service.ts
frontend/src/msw/: handlers.ts  msw-enablement.ts
openpectus/: .flake8  Dockerfile  __init__.py  build.json  c4-documentation.dsl  docker-compose.yml  requirements.txt  sentry.py  setup.cfg
openpectus/aggregator/: Dockerfile  aggregator-openapi-spec.json  aggregator.py  aggregator_message_handlers.py  aggregator_server.py  alembic.ini  command_examples.py  command_util.py  csv_generator.py  deps.py  exceptions.py  frontend_publisher.py  generate_openapi_spec_and_typescript_interfaces.py  main.py  message_handlers.py  models.py  protocol.py  requirements.txt  spa.py  start.py  webpush_publisher.py
openpectus/aggregator/data/: __init__.py  alembic.ini  database.py  models.py  repository.py
openpectus/aggregator/frontend_ws/: frontend_pubsub.py  poc.py  pubsub_client.py  pubsub_server.py
openpectus/aggregator/models/: models.py
openpectus/aggregator/routers/: __init__.py  admin.py  aggregator_websocket.py  auth.py  batch_job.py  dto.py  lsp.py  process_unit.py  pwa.py  recent_runs.py  serialization.py  version.py  webpush.py
openpectus/aggregator/test/: test_api.py
openpectus/engine/: archiver.py  command_manager.py  commands.py  composite_hardware.py  demo_uod.py  eng.py  engine.py  engine_interpreter_context.py  engine_message_builder.py  engine_message_handlers.py  engine_reporter.py  engine_runner.py  hardware.py  hardware_error.py  hardware_recovery.py  internal_commands.py  internal_commands_impl.py  labjack_hardware.py  main.py  message_handlers.py  method_manager.py  method_model.py  models.py  opcua_hardware.py  uod_builder_api.py
openpectus/engine/configuration/: demo_uod.py  labjack_test.py  opcua_test.py
openpectus/engine/labjack/: LICENSE  ljm_constants.json
openpectus/frontend/: angular.json  eslint.config.js  extra-webpack.config.js  generate-api.sh  openapi-ts.config.ts  openapi.json  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
openpectus/frontend/src/: index.html  main.ts  proxy.conf.json  styles.scss
openpectus/lang/: __init__.py
openpectus/lang/exec/: analyzer.py  argument_specification.py  base_unit.py  clock.py  commands.py  elementstate.py  errors.py  events.py  hotswap.py  interpreter_models.py  pinterpreter.py  readings.py  regex.py  runlog.py  tag_lifetime.py  tags.py  tags_impl.py  ticker.py  timer.py  tracer.py  tracking.py  units.py  uod.py  visitor.py
openpectus/lang/grammar/: pcode.g4  pgrammar.py  pprogrambuilder.py  pprogramformatter.py
openpectus/lang/model/: ast.py  parser.py  pprogram.py  pprogramformatter.py
openpectus/lsp/: LspReadme.md  config.py  demo.py  lsp_analysis.py  main.py  model.py  pylsp_plugin.py
openpectus/lsp/new_parser/: exceptions.py  grammar.py  parser.py  program.py
openpectus/protocol/: aggregator.py  aggregator_dispatcher.py  aggregator_messages.py  clienthandler.py  dispatch.py  dispatch_interface.py  engine.py  engine_dispatcher.py  engine_dispatcher_error.py  engine_messages.py  exceptions.py  messages.py  models.py  serialization.py  serverhandler.py
openpectus/test/: __init__.py  jest2.xml  junit.xml  test_analyzer.py  test_builder.py  test_interpreter.py  test_lexer.py  test_model.py  test_parser.py  test_pint.py  test_timer.py
openpectus/test/aggregator/: test_aggregator.py  test_api.py  test_command_util.py  test_data.py
openpectus/test/engine/: test_analyzer.py  test_analyzer_check.py  test_analyzer_enrich.py  test_builder.py  test_composite_hardware.py  test_elementstate.py  test_engine.py  test_engine_new.py  test_engine_tags.py  test_hardware.py  test_helpers.py  test_internal_commands_registry.py  test_interpreter.py  test_labjack_hardware.py  test_lexer.py  test_method_manager.py  test_opcua_hardware.py  test_parser.py  test_pint.py  test_runlog.py  test_tag.py  test_timer.py  test_units.py  test_uod.py  test_uod_commands.py  test_validate_demo_uod.py  utility_methods.py  utility_methods_new.py
openpectus/test/integration/: heavy_uod.py  test_aggregator_restart.py  (+1 more)
runtime3/: .flake8  README.md  pyproject.toml
runtime3/opruntime/: __init__.py
runtime3/opruntime/lang/: exceptions.py  hotswap.py  interpreter.py  models.py  parser.py  program.py  visitor.py
runtime3/opruntime/test/: comparison.html  test_hotswap.py  test_interpreter.py  test_parser.py
(+400 files in other folders)
